--- a/vol/templates/vol/detail.html
+++ b/vol/templates/vol/detail.html
@@ -1,11 +1,6 @@
-<!doctype html>
-<html>
-    <head>
-        <title>Détail du vol du {{ vol.date }}</title>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
-    </head>
-    <body>
+{% extends 'vol/base.html' %}
+{% block title %} Détails du vol {% endblock %}
+{% block content %}
     <div class="container">
         <div class="row"><p></p></div>
         <div class="row">
@@ -141,5 +136,4 @@
         </div>
         <div class="row"><p></p></div>
     </div>
-    </body>
-</html>
+{% endblock %}
