--- a/vol/templates/vol/index.html
+++ b/vol/templates/vol/index.html
@@ -1,11 +1,5 @@
-<!doctype html>
-<html>
-    <head>
-        <title>Liste des vols</title>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
-    </head>
-    <body>
+{% extends 'vol/base.html' %}
+{% block content %}
     <div class="container">
         <div class="row">
             <div class="col-4"><h1>Affichage des vols</h1></div>
@@ -14,6 +8,7 @@
             <div class="col-1"><a target=_blank href="../admin"><h4>Login</h4></a></div>
         </div>
          {% if vols_list %}
+         <div class="table-responsive">
             <table class="table table-bordered table-hover table-sm">
                 <thead class="thead-dark">
                 <tr>
@@ -22,8 +17,15 @@
                     <th scope="col">Arrivée</th>
                     <th scope="col">CDB</th>
                     <th scope="col">OPL</th>
+                    <th scope="col">OBS1</th>
+                    <th scope="col">OBS2</th>
+                    <th scope="col">Instructeur</th>
                     <th scope="col">Durée Jour</th>
                     <th scope="col">Durée Nuit</th>
+                    <th scope="col">Simu</th>
+                    <th scope="col">Arrivées IFR</th>
+                    <th scope="col">Durée IFR</th>
+                    <th scope="col">Fonction</th>
                     <th scope="col">Immatriculation</th>
                     <th scope="col">Type d'avion</th>
                 </tr>
@@ -36,8 +38,25 @@
                                 <td>{{ vol.arrivee }}</td>
                                 <td>{{ vol.cdb }}</td>
                                 <td>{{ vol.opl }}</td>
+                                <td>{{ vol.obs1 }}</td>
+                                <td>{{ vol.obs2 }}</td>
+                                <td>{{ vol.instruct }}</td>
                                 <td>{{ vol.duree_jour }}</td>
                                 <td>{{ vol.duree_nuit }}</td>
+                                <td>{% if vol.vol_simu %}
+                                        {{ vol.duree_simu }}
+                                    {% else %}
+                                    {% endif %}</td>
+                                    <td>{% if vol.vol_ifr %}
+                                            <i class="fas fa-check-circle text-success"></i></h5>
+                                        {% else %}
+                                        <i class="fas fa-times-circle text-danger"></i>
+                                        {% endif %}</td>
+                                <td>{% if vol.vol_ifr %}
+                                                {{ vol.duree_ifr }}
+                                            {% else %}
+                                            {% endif %}</td>
+                                <td>{{ vol.fonction }}</td>
                                 <td>{{ vol.immatriculation }}</td>
                                 <td>{{ vol.immatriculation.type_avion }}</td>
                         </tr>
@@ -45,9 +64,9 @@
                     {% endfor %}
                 </tbody>
             </table>
+        </div>
         {% else %}
             <p>Il n'y a pas de vols enregistrés.</p>
         {% endif %}
     </div>
-    </body>
-</html>
+{% endblock %}
