--- a/vol/templates/vol/somme.html
+++ b/vol/templates/vol/somme.html
@@ -68,6 +68,8 @@
                             <td></td>
                             <td></td>
                         </tr>
+                    </tbody>
+                    <tfoot>
                         <tr class="table-info">
                             <th>Total</th>
                             <td>{{ liste.9.duree_jour__sum }}</td>
@@ -82,7 +84,7 @@
                             <td></td>
                             <td></td>
                         </tr>
-                    </tbody>
+                    </tfoot>
                 </table>
             </div>
             <div class="col"></div>
