--- a/vol/templates/vol/index.html
+++ b/vol/templates/vol/index.html
@@ -1,8 +1,10 @@
 {% extends 'vol/base.html' %}
 {% block content %}
 <script>
-$(document).ready( function () {
-    $('#table_id').DataTable();
+$(document).ready(function() {
+    $('#table_id').DataTable({
+        "ordering": false
+    });
 } );
 </script>
     <div class="container">
@@ -17,7 +19,7 @@ $(document).ready( function () {
             <div class="col-1"></div>
             <div class="col-10">
             <div class="table-responsive">
-                <table class="table table-bordered table-hover table-sm dt-responsive" id="table_id">
+                <table class="table table-striped table-bordered dt-responsive nowrap" id="table_id" style="width:100%">
                     <thead>
                     <tr>
                         <th>Date</th>
