--- a/vol/templates/vol/index.html
+++ b/vol/templates/vol/index.html
@@ -16,15 +16,14 @@ $(document).ready(function() {
         </div>
          {% if vols_list %}
          <div class="row">
-            <div class="col-1"></div>
-            <div class="col-10">
+            <div class="col"></div>
+            <div class="col-12">
             <div class="table-responsive">
-                <table class="table table-striped table-bordered dt-responsive nowrap" id="table_id" style="width:100%">
+                <table class="table table-striped table-bordered table-sm dt-responsive nowrap" id="table_id" style="width:100%">
                     <thead>
                     <tr>
                         <th>Date</th>
-                        <th>Départ</th>
-                        <th>Arrivée</th>
+                        <th>Vol</th>
                         <th>CDB</th>
                         <th>OPL</th>
                         <th>OBS1</th>
@@ -44,24 +43,35 @@ $(document).ready(function() {
                         {% for vol in vols_list %}
                             <tr>
                                     <td><a target="_blank" href="{% url 'detail' vol.id %}">{{ vol.date|date:"d/m/Y" }}</a></td>
-                                    <td>{{ vol.depart }}</td>
-                                    <td>{{ vol.arrivee }}</td>
+                                    <td>{{ vol.depart }}/{{ vol.arrivee }}</td>
                                     <td>{{ vol.cdb }}</td>
                                     <td>{{ vol.opl }}</td>
-                                    <td>{{ vol.obs1 }}</td>
-                                    <td>{{ vol.obs2 }}</td>
-                                    <td>{{ vol.instruct }}</td>
+                                    <td>{% if vol.obs1 %}
+                                            {{ vol.obs1 }}
+                                        {% else %}
+                                            -
+                                        {% endif %}</td>
+                                    <td>{% if vol.obs2 %}
+                                            {{ vol.obs2 }}
+                                        {% else %}
+                                            -
+                                        {% endif %}</td>
+                                    <td>{% if vol.instruct %}
+                                            {{ vol.instruct }}
+                                        {% else %}
+                                            -
+                                        {% endif %}</td>
                                     <td>{{ vol.duree_jour }}</td>
                                     <td>{{ vol.duree_nuit }}</td>
                                     <td>{% if vol.vol_simu %}
                                             {{ vol.duree_simu }}
                                         {% else %}
                                         {% endif %}</td>
-                                        <td>{% if vol.vol_ifr %}
-                                                <i class="fas fa-check-circle text-success"></i></h5>
-                                            {% else %}
-                                            <i class="fas fa-times-circle text-danger"></i>
-                                            {% endif %}</td>
+                                    <td>{% if vol.vol_ifr %}
+                                            <i class="fas fa-check-circle text-success"></i></h5>
+                                        {% else %}
+                                        <i class="fas fa-times-circle text-danger"></i>
+                                        {% endif %}</td>
                                     <td>{% if vol.vol_ifr %}
                                                     {{ vol.duree_ifr }}
                                                 {% else %}
@@ -75,7 +85,7 @@ $(document).ready(function() {
                 </table>
             </div>
             </div>
-            <div class="col-1"></div>
+            <div class="col"></div>
         </div>
         {% else %}
             <p>Il n'y a pas de vols enregistrés.</p>
