Ajout et modification de vols

--- a/vol/templates/vol/base.html
+++ b/vol/templates/vol/base.html
@@ -7,7 +7,9 @@
         <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.19/css/dataTables.bootstrap4.min.css">
         <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/responsive/2.2.3/css/responsive.bootstrap4.min.css">
 
-        <script type="text/javascript" charset="utf8" src="https://code.jquery.com/jquery-3.3.1.js"></script>
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
         <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
         <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.19/js/dataTables.bootstrap4.min.js"></script>
         <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/responsive/2.2.3/js/dataTables.responsive.min.js"></script>
@@ -16,6 +18,19 @@
         
     </head>
     <body>
+
+        <div class="container">
+            <div class="row">
+                <div class="col-6"><h1>Base de données des vols</h1></div>
+                <div class="col"></div>
+                <div class="col-1"><a target=_blank href="{% url 'index' %}"><h4>Vols</h4></a></div>
+                <div class="col-1"><a target=_blank href="{% url 'somme' %}"><h4>Totaux</h4></a></div>
+                {% if user.is_authenticated %}
+                    <div class="col-1"><a target=_blank href="{% url 'new_vol' %}"><h4>Ajouter</h4></a></div>
+                {% endif %}
+                <div class="col-1"><a target=_blank href="../admin"><h4>Login</h4></a></div>
+            </div>
+            <hr>
 
    {% block content %}{% endblock %}
  </body>
