--- a/vol/templates/vol/base.html
+++ b/vol/templates/vol/base.html
@@ -23,12 +23,16 @@
             <div class="row">
                 <div class="col-6"><h1>Base de données des vols</h1></div>
                 <div class="col"></div>
-                <div class="col-1"><a target=_blank href="{% url 'index' %}"><h4>Vols</h4></a></div>
-                <div class="col-1"><a target=_blank href="{% url 'somme' %}"><h4>Totaux</h4></a></div>
+
                 {% if user.is_authenticated %}
+                    <div class="col-1"><a href="{% url 'index' %}"><h4>Vols</h4></a></div>
+                    <div class="col-1"><a target=_blank href="{% url 'somme' %}"><h4>Totaux</h4></a></div>
                     <div class="col-1"><a target=_blank href="{% url 'new_vol' %}"><h4>Ajouter</h4></a></div>
+                    <div class="col"><p class="top-menu">Bonjour {{ user.username }} <small>(<a href="{% url 'logout' %}">Déconnexion</a>)</small></p></div>
+                {% else %}
+                    <div class="col"><a target=_blank href="{% url 'login' %}"><h4>Connexion</h4></a></div>
                 {% endif %}
-                <div class="col-1"><a target=_blank href="../admin"><h4>Login</h4></a></div>
+
             </div>
             <hr>
 
