--- a/vol/templates/vol/detail.html
+++ b/vol/templates/vol/detail.html
@@ -3,13 +3,22 @@
 {% block content %}
 
     <div class="container">
-        <div class="row"><p><a class="btn btn-default" id="example" data-toggle="tooltip" data-placement="bottom" title="Modifier le vol" href="{% url 'edit_vol' pk=vol.pk %}"><i class="far fa-edit"></i></a>
-</p></div>
+        <div class="row">
+            <div class="col-1">
+                <a class="btn btn-outline-primary management_links" data-toggle="tooltip" data-placement="bottom" title="Modifier le vol" href="{% url 'edit_vol' pk=vol.pk %}"><i class="fas fa-pencil-alt"></i></a>
+            </div>
+            <div class="col"></div>
+            <div class="col-1">
+                <a class="btn btn-outline-danger management_links" data-toggle="tooltip" data-placement="bottom" title="Supprimer le vol" href="{% url 'remove_vol' pk=vol.pk %}"><i class="far fa-trash-alt"></i></a>
+            </div>
+        </div>
+    </div>
 
-
+<hr>
+    <div class="container">
         <script>
         $(function () {
-          $('#example').tooltip()
+          $('.management_links').tooltip()
         })
         </script>
 
